# as-help-mcp

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  RAG.md  README.md  SECURITY.md  as_help_server.spec  build.py  docker-compose.yml  mcp_stderr.txt  prepare_model.py  pyproject.toml  register_task.ps1  run_mcp.py  start_http_server.bat  test_breadcrumb_query.py  test_incremental.py
.github/: copilot-instructions.md
.github/workflows/: quality.yml  release-binaries.yml  test.yml
src/: embeddings.py  indexer.py  search_engine.py  server.py
tests/: README.md  conftest.py
tests/e2e/: test_full_workflows.py
tests/integration/: test_indexer_search.py
tests/unit/: test_embeddings.py  test_indexer.py  test_search_engine.py  test_server.py
