[project]
name = "as-help-server"
version = "1.0.0"
description = "MCP server for B&R Automation Studio help documentation search"
readme = "README.md"
authors = [
    { name = "Lars Jensen"},
    { name = "Andreas Poulsen"},
]
requires-python = ">=3.12"
dependencies = [
    "defusedxml>=0.0.1",
    "lxml>=5.3.0",
    "lxml-stubs>=0.5.1",
    "mcp[cli]>=1.21.2",
    "python-dotenv>=1.2.1",
    "types-defusedxml>=0.7.0.20250822",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
dev = [
    "mypy>=1.13.0",
    "bandit>=1.8.0",
    "pip-audit>=2.8.0",
    "radon>=6.0.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
as-help-server = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-report=html --durations=10"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
